Improve Json exporter tests