@@ -27,9 +27,9 @@ public class GraphClassDiagramConverterTest
     void convertGraphToClassDiagramTest()
     {
         ClassDiagramManager classDiagramManager = new ClassDiagramManager();
-        List<String> chosenFiles = Arrays.asList("MainWindow",
-                                                 "LatexEditorView",
-                                                 "OpeningWindow");
+        List<String> chosenFiles = List.of("MainWindow",
+                                           "LatexEditorView",
+                                           "OpeningWindow");
 
         classDiagramManager.createSourceProject(LatexEditor.SRC.path);
         classDiagramManager.convertTreeToDiagram(chosenFiles);
